[package]
name = "pcw_protocol"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Peer Cash Wallet Protocol (PCW-1): IP-to-IP BSV settlement protocol per spec."
repository = "https://github.com/murphsicles/PCW-1"
readme = "README.md"

[dependencies]
base58 = "0.2.0"
chrono = "0.4.41"
hex = "0.4.3"
hmac = "0.12.1"
merlin = "3.0.0"
ripemd = "0.1.3"
secp256k1 = { version = "0.31.0", features = ["recovery"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.5.2" }
thiserror = "2.0.16"
tokio = { version = "1.41.0", features = ["time", "rt-multi-thread"] }
unicode-normalization = "0.1.24"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"

[profile.dev]
opt-level = 3
