[package]
name = "pcw_protocol"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Peer Cash Wallet Protocol (PCW-1): IP-to-IP BSV settlement protocol per spec."
repository = "https://github.com/murphsicles/PCW-1"
readme = "README.md"

[dependencies]
async-trait = "0.1"
base58 = "0.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
merlin = "3.0.0"
ripemd160 = "0.10.0"
secp256k1 = { version = "0.31.0", features = ["recovery", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.5.2" }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["time", "rt-multi-thread", "io-util", "net", "macros"] }
unicode-normalization = "0.1.24"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"

[[example]]
name = "main"
path = "examples/main.rs"

[profile.dev]
opt-level = 3
